# DTEAM-django-practical-test

./: pyproject.toml
cvapp/audit/: middleware.py  models.py  tests.py  urls.py  views.py
cvapp/audit/migrations/: 0001_initial.py
cvapp/audit/templates/audit/: recent_logs.html
cvapp/cvapp/: asgi.py  settings.py  urls.py  wsgi.py
cvapp/main/: admin.py  context_processors.py  models.py  serializers.py  tests.py  urls.py  views.py
cvapp/main/fixtures/: cv_data.json  projects.json  skills.json
cvapp/main/migrations/: 0001_initial.py
cvapp/main/templates/: base.html  cv_page.html  cv_page_pdf.html  index.html  settings.html
cvapp/main/templates/partials/: footer.html  header.html
